--- a/app/seminar4/src/main/res/layout/activity_main.xml
+++ b/app/seminar4/src/main/res/layout/activity_main.xml
@@ -9,15 +9,16 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_width="186dp"
+        android:layout_height="89dp"
         android:layout_gravity="center_horizontal"
+        android:text="Adauga insula"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.171" />
 
     <Button
         android:id="@+id/button3"
