--- a/app/seminar4/src/main/res/layout/activity_main.xml
+++ b/app/seminar4/src/main/res/layout/activity_main.xml
@@ -45,4 +45,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3"
         app:layout_constraintVertical_bias="0.095" />
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="206dp"
+        android:layout_height="85dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Interactiune Json"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.56"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintVertical_bias="0.159" />
 </androidx.constraintlayout.widget.ConstraintLayout>
