--- a/app/seminar4/src/main/res/layout/activity_main.xml
+++ b/app/seminar4/src/main/res/layout/activity_main.xml
@@ -57,4 +57,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4"
         app:layout_constraintVertical_bias="0.159" />
+
+    <Button
+        android:id="@+id/btnFav"
+        android:layout_width="230dp"
+        android:layout_height="93dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Insule Favorite"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.618"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button5"
+        app:layout_constraintVertical_bias="0.432" />
 </androidx.constraintlayout.widget.ConstraintLayout>
