--- a/app/seminar4/src/main/res/layout/activity_formular_adaugare.xml
+++ b/app/seminar4/src/main/res/layout/activity_formular_adaugare.xml
@@ -80,18 +80,26 @@
 
         <CheckBox
             android:id="@+id/checkBox"
-            android:textSize="48dp"
             android:layout_width="wrap_content"
             android:layout_height="88dp"
             android:layout_weight="2"
-            android:text="Locuita" />
+            android:text="Locuita"
+            android:textSize="48dp" />
 
     </LinearLayout>
+
 
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Adaugare" />
+
+    <CheckBox
+        android:id="@+id/checkBox2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Disponibil Online"
+        android:textSize="48dp"/>
 
 </LinearLayout>
